# graphtyper

./: .atomignore  .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md
.github/workflows/: cancel.yaml  ci_linux.yaml  clang-format.yaml
docs/: Doxyfile.in
include/: graphtyper.hpp
include/graphtyper/: constants.hpp.in
include/graphtyper/graph/: absolute_position.hpp  allele_cover.hpp  alt.hpp  alu_sequences.hpp  constructor.hpp  genomic_region.hpp  genotype.hpp  graph.hpp  graph_serialization.hpp  graph_utils.hpp  haplotype.hpp  haplotype_calls.hpp  haplotype_extractor.hpp  label.hpp  location.hpp  log_table.hpp  node.hpp  read_strand.hpp  ref.hpp  reference_depth.hpp  sequence_extractor.hpp  snp_event.hpp  sv.hpp  var_record.hpp
include/graphtyper/index/: index.hpp  index_entry.hpp  indexer.hpp  kmer_label.hpp  mem_index.hpp  ph_index.hpp  rocksdb.hpp
include/graphtyper/typer/: aligner.hpp  alignment.hpp  binned_pl.hpp  bucket.hpp  caller.hpp  discovery.hpp  event.hpp  event_call.hpp  genotype_paths.hpp  graph_swapper.hpp  logistic_constants.hpp  path.hpp  primers.hpp  read.hpp  read_stats.hpp  sample_call.hpp  segment.hpp  segment_calling.hpp  var_stats.hpp  variant.hpp  variant_call.hpp  variant_candidate.hpp  variant_map.hpp  variant_support.hpp  vcf.hpp  vcf_operations.hpp  vcf_writer.hpp
include/graphtyper/utilities/: adapter_removal.hpp  adapter_remover.hpp  bamshrink.hpp  bgzf_stream.hpp  filesystem.hpp  genotype.hpp  genotype_camou.hpp  genotype_hla.hpp  genotype_lr.hpp  genotype_sv.hpp  graph_help_functions.hpp  gzstream.hpp  hash_seqan.hpp  hts_parallel_reader.hpp  hts_reader.hpp  hts_record.hpp  hts_store.hpp  hts_utils.hpp  hts_writer.hpp  io.hpp  kmer_help_functions.hpp  logging.hpp  options.hpp  sam_reader.hpp  sequence_operations.hpp  snp_hwe.hpp  string.hpp  system.hpp  type_conversions.hpp  vcf_help_functions.hpp
include/popvcf/: encode.hpp  sequence_utils.hpp
src/: CMakeLists.txt  main.cpp  paw.cpp
src/graph/: absolute_position.cpp  alt.cpp  constructor.cpp  genomic_region.cpp  genotype.cpp  graph.cpp  graph_serialization.cpp  haplotype.cpp  haplotype_calls.cpp  haplotype_extractor.cpp  label.cpp  node.cpp  read_strand.cpp  ref.cpp  ref_node.cpp  reference_depth.cpp  sequence_extractor.cpp  snp_event.cpp  sv.cpp  var_node.cpp  var_record.cpp
src/index/: index_entry.cpp  indexer.cpp  kmer_label.cpp  mem_index.cpp  ph_index.cpp  rocksdb.cpp
src/typer/: aligner.cpp  alignment.cpp  bucket.cpp  caller.cpp  discovery.cpp  event.cpp  genotype_paths.cpp  graph_swapper.cpp  path.cpp  primers.cpp  read.cpp  sample_call.cpp  segment.cpp  segment_calling.cpp  var_stats.cpp  variant.cpp  variant_candidate.cpp  variant_map.cpp  variant_support.cpp  vcf.cpp  vcf_operations.cpp  vcf_writer.cpp
src/utilities/: adapter_removal.cpp  bamshrink.cpp  genotype.cpp  genotype_camou.cpp  genotype_hla.cpp  genotype_lr.cpp  genotype_sv.cpp  hash_seqan.cpp  hts_parallel_reader.cpp  hts_reader.cpp  hts_writer.cpp  io.cpp  kmer_help_functions.cpp  options.cpp  sam_reader.cpp  snp_hwe.cpp  system.cpp  type_conversions.cpp
test/: CMakeLists.txt  help_functions.hpp  test.cpp  test.hpp  test_seqanhts.cpp
test/catch/: CMakeLists.txt
test/data/reference/: HLA.vcf  HLA.vcf.gz.tbi  HLA_G.vcf  HLA_G.vcf.gz.tbi  HLA_G_features.fa  example.vcf  example2.vcf  example2_bgz.vcf.gz.tbi  example3.vcf.gz.tbi  example4.vcf.gz.tbi  example5.vcf.gz.tbi  example6.vcf  example7.vcf  example7_bgzip.vcf.gz.tbi  example_bgz.vcf.gz.tbi  index_test.fa  index_test.fa.fai  index_test.vcf  index_test.vcf.gz.tbi  index_test_b37.fa  index_test_b37.fa.fai  index_test_b37.vcf  index_test_b37.vcf.gz.tbi  indexz.vcf.gz.tbi  reference.fa  reference.fa.fai  test.bam.csi  test.cram  test.cram.crai  test.sam  test_write.cram
test/graph/: CMakeLists.txt  test_constructor.cpp  test_genomic_region.cpp  test_graph.cpp  test_haplotypes.cpp
test/index/: CMakeLists.txt  test_index.cpp
test/typer/: CMakeLists.txt  test_genotype_path.cpp  test_graph_swapping.cpp  test_gyper_aligner.cpp  test_path.cpp  test_variant.cpp  test_vcf.cpp  test_vcf_io.cpp
test/utilities/: CMakeLists.txt  test_adapter_removal.cpp  test_kmer_help_functions.cpp  test_utilities.cpp
utilities/cmake_modules/: FindSeqAn.cmake  FindZStd.cmake  Findrocksdb.cmake  Findsnappy.cmake
utilities/seqan/: CMakeLists.txt
